--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "local:dev": "env-cmd -f ./env/.env.local next dev -p 3030",
+    "local:build": "env-cmd -f ./env/.env.local next build",
+    "local:start": "env-cmd -f ./env/.env.local next start -p 3030",
+    "dev:dev": "env-cmd -f .env next dev -p 3030",
+    "dev:build": "env-cmd -f .env next build",
+    "dev:start": "env-cmd -f .env next start -p 3030",
+    "staging:dev": "env-cmd -f .env.staging next dev -p 3030",
+    "staging:build": "env-cmd -f .env.staging next build",
+    "staging:start": "env-cmd -f .env.staging next start -p 3030",
+    "prod:dev": "env-cmd -f .env.production next dev -p 3030",
+    "prod:build": "env-cmd -f .env.production next build",
+    "prod:start": "env-cmd -f .env.production next start -p 3030",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.32.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-airbnb": "^19.0.4",
