--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.32.1",
+    "@tanstack/react-query": "^5.35.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -36,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "env-cmd": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
