--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0"
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "env-cmd": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
